<resources>
    <string name="app_name">Android6D3R</string>
    <string name="un_jugador">1 Player</string>
    <string name="dos_jugadores">2 Players</string>
    <string name="facil">Easy</string>
    <string name="normal">Normal</string>
    <string name="imposible">Insane</string>
    <string name="casilla">Tile</string>
    <string name="circulos_ganan">Circles win!</string>
    <string name="aspas_ganan">Crosses win!</string>
    <string name="empate">Tie!</string>
</resources>